--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,12 +58,12 @@ nav{
 }
 
 #preview_background{
-	height: 79vh;
-	width: 90vh;
-	margin-right: 52%;
-	margin-top: 2%;
+	height: 75vh;
+    width: 90vh;
+    margin-right: 48%;
+    margin-top: 6%;
 	float: right;
-	overflow-y: scroll
+	overflow-y: scroll;
 }
 
 #preview_task{
@@ -105,6 +105,10 @@ nav{
 
 .container_separator{
 	margin-left: -3vh;
+}
+
+.coll-body{
+	background-color: #e3f2fd;
 }
 
 .title1{
