--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
-    background-image:url('../images/background.jpeg');
+    background-image:url('../images/background2.jpeg');
   }
 
  main {
@@ -15,15 +15,15 @@ body {
 /*  background colors */
 
 .btn{
-	background-color: #4db6ac !important;
+	background-color: #CC7120 !important;
 }
 
 nav{
-	background-color: #512da8 !important;
+	background-color: #4279FF !important;
 }
 
 .page-footer{
-	background-color: #4527a0 !important;
+	background-color: #3B6DE5 !important;
 }
 
 /* General */
@@ -52,10 +52,10 @@ nav{
 
 #container_event{
 	background-color: white;
-	width: 90vh;
+	width: 75vh;
     padding-left: 6vh;
-    padding-top: 5vh;
-    padding-bottom: 13.5vh;
+    padding-top: 1vh;
+    padding-bottom: 19.6vh;
 }
 
 .month_container{
@@ -73,7 +73,7 @@ nav{
 }
 
 .day_title{
-	background-color: #512da8;
+	background-color: #4279FF;
 	color: white;
 	width: 18.9vh;
     margin-left: -1.2vh;
@@ -122,10 +122,11 @@ nav{
 
 
 .container_separator{
-	margin-left: -3vh;
+	margin-left: -6vh;
 }
 
 .coll-body{
-	background-color: #e3f2fd;
+	background-color: #716599;
+	color: white;
 }
 
