--- a/assets/css/style-home.css
+++ b/assets/css/style-home.css
@@ -4,6 +4,8 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    color: white;
+    background-color: #DB0A5B;
   }
 
  main {
@@ -11,7 +13,7 @@ body {
  }
 
  nav{
-	background-color: #4279FF !important;
+	background-color: #DB0A5B !important;
 }
 
 .page-footer{
@@ -32,9 +34,27 @@ body {
 }
 
 #par1 {
-          height: 225px;
+          height: 380px;
 }
 
 #par2 {
-          height: 300px;
+          height: 850px;
+}
+
+.parallax-title{
+	margin-top: 37vh;
+    color: white;
+    width: 623px;
+    margin-left: 2vh;
+}
+
+.effect:hover{
+	opacity: 0.8;
+}
+
+.multiple-borders{
+	box-shadow: 0px 0px 0px 7px #994465;
+	padding: 14px !important;
+	background-color: #994465;
+	border: 12px solid white;
 }
