--- a/assets/css/style-home.css
+++ b/assets/css/style-home.css
@@ -61,6 +61,7 @@ body {
 	padding: 14px !important;
 	background-color: #994465;
 	border: 12px solid white;
+	box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.4);
 }
 
 .bold{
@@ -69,4 +70,8 @@ body {
 
 .pop{
 	font-size: 3vh;
+}
+
+.section{
+	margin-top: 6vh;
 }
