--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,14 @@
 /* General */
 
+html{
+    font-family: 'Exo', sans-serif;
+}
+
 body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
-    background-image:url('../images/background8.jpeg');
+    background-color: #EF4836;
   }
 
  main {
@@ -36,12 +40,13 @@ body {
 }
 
 .btn{
-	background-color: #CCBC1E !important;
+	background-color: #F7CA18 !important;
 	color: black
 }
 
 .btn:hover{
-	color: #FFE90C;
+	color: #F7CA18;
+    background-color: black !important;
 }
 
 .hover-button:hover{
@@ -58,7 +63,7 @@ body {
 }
 
 .back{
-	color: #CCBC1E;
+	color: #F7CA18;
 	position: fixed;
 }
 
@@ -72,35 +77,35 @@ body {
 	padding-top: 0vh !important;
     /* background-color: white; */
     height: 52vh;
-    padding-left: 35vh !important;
+    padding-left: 23vh !important;
 } 
 
 .month_block{
 	background-color: white;
-	height: 12vh;
-	border-right: 1px solid black;
-	width: 19vh !important;
-	padding-left: 0px !important;
+    height: 13vh;
+    width: 22vh !important;
+    padding-left: 0px !important;
+    margin-right: 35px;
+    box-shadow: 3px 3px 10px black;
 }
 
 .month_block:hover{
 	box-shadow: 0px 0px 150px rgba(0, 0, 0, 0.3);
     z-index: 2;
     -webkit-transition: all 200ms ease-in;
-    -webkit-transform: scale(1.5);
+    -webkit-transform: scale(1.25);
     -ms-transition: all 200ms ease-in;
-    -ms-transform: scale(1.5);   
+    -ms-transform: scale(1.25);   
     -moz-transition: all 200ms ease-in;
-    -moz-transform: scale(1.5);
+    -moz-transform: scale(1.25);
     transition: all 200ms ease-in;
-    transform: scale(1.5);
-    border: none;
+    transform: scale(1.25);
 }
 
 .day_title{
-	background-color: #994465;
+	background-color: #96281B;
 	color: white;
-	width: 18.9vh;
+	width: 22vh;
     /*margin-left: -1.15vh;*/
 }
 
@@ -129,12 +134,12 @@ body {
 }
 
 .hourZone{
-	height: 5vh;
-	width: 88.3vh;
-	background-color: white;
-	border-top: 1px dashed #ccc;
-	margin-top: -1px;
-	color: #ccc;
+    height: 5vh;
+    width: 88.3vh;
+    background-color: white;
+    border-top: 1px dashed #888;
+    margin-top: -1px;
+    color: #444;
 }
 
 #task_title{
@@ -143,8 +148,8 @@ body {
 }
 
 .coll-body{
-	background-color: #994465;
-	color: white;
+	background-color: #ccc;
+    color: black;
 }
 
 #preview_background::-webkit-scrollbar {
@@ -159,7 +164,7 @@ body {
   background-color: darkgrey;
   outline: 1px solid slategrey;
   border-radius: 10px;
-	background-color: #CCBC1E;
+	background-color: #F7CA18;
 }
 
 .container_separator{
@@ -178,9 +183,9 @@ body {
 
 .event_block{
 	margin-left: 8vh;
-	background-color: lightblue;
+	background-color: #CF000F;
 	color: white;
-	width: 24vh;
+	width: 30vh;
     height: 3vh;
 }
 
@@ -221,7 +226,7 @@ body {
 .popup .popuptext {
     visibility: hidden;
     width: 160px;
-    background-color: #555;
+    background-color: #C0392B;
     color: #fff;
     border-radius: 6px;
     padding: 8px;
@@ -241,7 +246,7 @@ body {
     margin-left: -74px;
     border-width: 5px;
     border-style: solid;
-    border-color: #555 transparent transparent transparent;
+    border-color: #96281B transparent transparent transparent;
 }
 
 /* Toggle this class - hide and show the popup */
