--- a/assets/css/themes/style-brazil.css
+++ b/assets/css/themes/style-brazil.css
@@ -1,10 +1,11 @@
 body{
     background-color: #1E824C;	
+    /*background : url("../../images/brazil.png");*/
 }
 
 /* group 1 */
 .day_title{
-	background-color: #00B16A;
+	background-color: #1F3A93;
 }
 
 /* group 2 */
