--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ body {
 }
 
 #modal_btn{
-    box-shadow: 5px 5px 20px black;    
+    /*box-shadow: 5px 5px 20px black;*/    
 }
 
 .hover-button{
@@ -72,7 +72,7 @@ body {
 .back{
 	color: #F7CA18;
 	position: fixed;
-    text-shadow: 5px 5px 10px black;
+    /*text-shadow: 5px 5px 10px black;*/
 }
 
 .slider .indicators .indicator-item.active{
@@ -91,13 +91,13 @@ body {
     width: 22vh !important;
     padding-left: 0px !important;
     margin-right: 35px;
-    box-shadow: 3px 3px 10px black;
+    /*box-shadow: 3px 3px 10px black;*/
     padding: 0 0rem !important;
     margin-bottom: 5px;
 }
 
 .month_block:hover{
-	/*box-shadow: 0px 0px 150px rgba(0, 0, 0, 0.3);*/
+	box-shadow: 3px 3px 10px black;
     z-index: 2;
     -webkit-transition: all 200ms ease-in;
     -webkit-transform: scale(1.1);
@@ -126,7 +126,7 @@ body {
 #preview_background{
 	height: 75vh;
 	overflow-y: scroll;
-    box-shadow: 5px 5px 20px black;
+    /*box-shadow: 5px 5px 20px black;*/
     background-color: white;
 }
 
@@ -137,7 +137,7 @@ body {
 }
 
 .collapsible{
-    box-shadow: 5px 5px 20px black;
+    /*box-shadow: 5px 5px 20px black;*/
 }
 
 .hourZone{
