--- a/assets/css/themes/style-pinkie.css
+++ b/assets/css/themes/style-pinkie.css
@@ -45,7 +45,7 @@ body{
 }
 
 .popup .popuptext::after {
-    border-color: #FABE58 transparent transparent transparent;
+    border-color: #E51348 transparent transparent transparent;
 }
 
 
