--- a/assets/css/themes/style-purple_rain.css
+++ b/assets/css/themes/style-purple_rain.css
@@ -41,11 +41,11 @@ body{
 
 /* group 3 */
 .popup .popuptext{
-    background-color: #DCC6E0;
+    background-color: #8E44AD;
 }
 
 .popup .popuptext::after {
-    border-color: #FABE58 transparent transparent transparent;
+    border-color: #7D339C transparent transparent transparent;
 }
 
 
