--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,11 +53,19 @@ body {
 }
 
 .hover-button{
-    color: black !important;
+    color: white !important;
 }
 
 .hover-button:hover{
-	color: white !important;
+	color: black !important;
+}
+
+.hover-button2{
+    color: black !important;
+}
+
+.hover-button2:hover{
+    color: white !important;
 }
 
 .title1{
@@ -124,7 +132,7 @@ body {
 /* day view */
 
 #preview_background{
-	height: 75vh;
+	height: 80vh;
 	overflow-y: scroll;
     /*box-shadow: 5px 5px 20px black;*/
     background-color: white;
@@ -138,6 +146,10 @@ body {
 
 .collapsible{
     /*box-shadow: 5px 5px 20px black;*/
+}
+
+.collapsible-header.active {
+    box-shadow: 0px 0px 10px black;
 }
 
 .hourZone{
@@ -157,6 +169,8 @@ body {
 .coll-body{
 	background-color: #ccc;
     color: black;
+    position: relative;
+    z-index: -1;
 }
 
 #preview_background::-webkit-scrollbar {
@@ -175,7 +189,7 @@ body {
 }
 
 .container_separator{
-	margin-left: -6vh;
+	margin-left: -5vh;
 }
 
 .menu_coll{
@@ -204,11 +218,9 @@ body {
 
 #container_event{
 	background-color: white;
-	width: 115vh;
     padding-left: 6vh;
     padding-top: 1vh;
-    padding-bottom: 21.8vh;
-    margin-top: 7vh;
+    height: 100vh;
 }
 
 #hour_error{
@@ -241,6 +253,7 @@ body {
     bottom: 125%;
     left: 34%;
     margin-left: -80px;
+    box-shadow: 3px 3px 10px black;
 }
 
 /* Popup arrow */
@@ -252,6 +265,7 @@ body {
     margin-left: -74px;
     border-width: 5px;
     border-style: solid;
+    text-shadow: 3px 3px 10px black;
 }
 
 /* Toggle this class - hide and show the popup */
