--- a/assets/css/style-account.css
+++ b/assets/css/style-account.css
@@ -9,7 +9,7 @@ body {
     min-height: 100vh;
     flex-direction: column;
     color: white;
-    background-color: #446CB3;
+    background-color: #2574A9;
     border: 20px solid #013243;
     padding-top: 18vh;
   }
@@ -38,6 +38,7 @@ main {
 
  label{
  	font-size: 2.5vh !important;
+    color: white !important;
  }
 
  input#Username{
