--- a/assets/css/style-404.css
+++ b/assets/css/style-404.css
@@ -9,8 +9,8 @@ body {
     min-height: 100vh;
     flex-direction: column;
     color: white;
-    background-color: #DB0A5B;
-    border: 20px solid #994465;
+    background-color: #2574A9;
+    border: 20px solid #013243;
   }
 
  main {
