--- a/assets/css/style-contact.css
+++ b/assets/css/style-contact.css
@@ -27,6 +27,7 @@ main {
 
 input{
     color: black;
+    border: none;
 }
 
 label{
@@ -36,6 +37,5 @@ label{
 textarea{
     background-color: white !important;
     color: black !important;
-    border: 1px solid grey !important;
     min-height: 150px !important;
 }
