--- a/assets/css/style-contact.css
+++ b/assets/css/style-contact.css
@@ -8,12 +8,19 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
-    color: white;
     background-color: #2574A9;
   }
 
 main {
   flex: 1 0 auto;
+}
+
+h1{
+    color: white !important;
+}
+
+.up{
+    margin-top: -0.5vh;
 }
 
 .btn{
@@ -30,12 +37,24 @@ input{
     border: none;
 }
 
+input::placeholder{
+    color: #AAA !important;
+}
+
 label{
     color: white !important;
+    font-size: 2.5vh !important;
+    margin-top: -1vh !important;
 }
 
 textarea{
     background-color: white !important;
     color: black !important;
     min-height: 150px !important;
+}
+
+@media screen and (max-device-width: 450px) {
+    label { 
+        font-size: 1.5vh !important;
+    }
 }
