--- a/assets/css/style-test.css
+++ b/assets/css/style-test.css
@@ -7,7 +7,6 @@ body {
     min-height: 100vh;
     flex-direction: column;
     color: white;
-    background-color: #446CB3;
   }
 
  main {
@@ -146,6 +145,13 @@ article{
 
 li.indicator-item.active{
 	background-color: #013243 !important;
+}
+
+.progress{
+	position: fixed;
+    margin-top: 50vh;
+    margin-left: 50vh;
+    width: 100vh;
 }
 
 @media screen and (max-device-width: 990px) {
