--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,6 +87,25 @@ body {
 	background-color: #CCBC1E !important;
 }
 
+.diagonal{
+    height: 2vh;
+    width: 30vh;
+    background-color: #F7CA18;
+    position: fixed;
+    transform: rotate(-65deg);
+    box-shadow: 5px 5px 15px black;
+}
+
+#stripe1{
+    right: -10vh;
+    bottom: 6vh;
+}
+
+#stripe2{
+    right: -10vh;
+    bottom: -4vh;
+}
+
 /* month view */
 
 .month_container{
@@ -229,8 +248,6 @@ body {
     font-size: 12px;
 }
 
-/* pop up code */
-
 .popup {
     position: relative;
     display: inline-block;
@@ -241,7 +258,6 @@ body {
     user-select: none;
 }
 
-/* The actual popup */
 .popup .popuptext {
     visibility: hidden;
     width: 160px;
@@ -256,7 +272,6 @@ body {
     box-shadow: 3px 3px 10px black;
 }
 
-/* Popup arrow */
 .popup .popuptext::after {
     content: "";
     position: absolute;
@@ -268,14 +283,11 @@ body {
     text-shadow: 3px 3px 10px black;
 }
 
-/* Toggle this class - hide and show the popup */
 .popup .show {
     visibility: visible;
     -webkit-animation: fadeIn 0.5s;
     animation: fadeIn 0.5s;
 }
-
-/* Add animation (fade in the popup) */
 @-webkit-keyframes fadeIn {
     from {opacity: 0;} 
     to {opacity: 1;}
@@ -286,24 +298,7 @@ body {
     to {opacity:1 ;}
 }
 
-.diagonal{
-    height: 2vh;
-    width: 30vh;
-    background-color: #F7CA18;
-    position: fixed;
-    transform: rotate(-65deg);
-    box-shadow: 5px 5px 15px black;
-}
-
-#stripe1{
-    right: -10vh;
-    bottom: 6vh;
-}
-
-#stripe2{
-    right: -10vh;
-    bottom: -4vh;
-}
+/*responsive*/
 
 @media screen and (max-device-width: 1250px){
     .add_button{
